# web5claims

./: .gitignore  Cargo.toml  README.md  flow.puml  justfile  overview.puml  web5claims-detailed-flow.puml
.github/workflows/: gh-pages.yaml
src/: issuer.rs  lib.rs  verifier.rs  zk_proof.rs
src/aleo/: program.rs
web5claims-ui/: 404.html  Cargo.toml  Trunk.toml  index.html
web5claims-ui/src/: lib.rs  router.rs
web5claims-ui/src/components/: app.rs  certificate_display.rs  certificate_form.rs  certificate_image.rs  header.rs  mod.rs
web5claims-ui/src/components/certificate/: error_display.rs  mod.rs  proof_buttons.rs  proof_display.rs
web5claims-ui/src/components/forms/: challenge_stats.rs  language_selector.rs  mod.rs  performance_preview.rs  student_info.rs
web5claims-ui/src/components/layout/: mod.rs  page_layout.rs  two_column_layout.rs
web5claims-ui/src/components/ui/: button.rs  card.rs  input_field.rs  mod.rs  progress_bar.rs  select_field.rs
web5claims-ui/src/components/wallet/: aleo_wallet.rs  mod.rs  zkpassport_wallet.rs
web5claims-ui/src/pages/: certificate_lookup.rs  home.rs  issuer.rs  mod.rs  not_found.rs  verifier.rs  verify_proof.rs  zkpass_redirect.rs  zkpassport.rs
web5claims-ui/src/services/: aleo_service.rs  mod.rs  zk_service.rs  zkpassport_service.rs
web5claims-ui/src/types/: mod.rs
web5claims-ui/src/utils/: clipboard.rs  mod.rs  proof_link.rs
web5claimsleo/: README.md  justfile  program.json
web5claimsleo/src/: main.leo
web5claimsleo/tests/: test_web5claimsleo.leo
zkpass/: index.html  package-lock.json  package.json  script.js  styles.css  vite.config.js
