[package]
name = "web5claims"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "web5claims-ui"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
ed25519-dalek = "2.1"
rand = "0.8"

[dependencies.konnektoren-core]
git = "https://github.com/konnektoren/konnektoren-rs.git"
features = ["certificates"]

[dev-dependencies]
tokio-test = "0.4"
