[package]
name = "web5claims-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
gloo = "0.11"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# Add the main web5claims crate
web5claims = { path = ".." }

# Web-sys with all the features we need for clipboard and DOM manipulation
[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlDocument",
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "Window",
    "Navigator",
    "Clipboard",
    "CssStyleDeclaration",
    "Node",
]

[dependencies.konnektoren-core]
git = "https://github.com/konnektoren/konnektoren-rs.git"
features = ["certificates"]
